# DyNAMO

./: CHANGES_SUMMARY.md  EMERGENCY_FIX.md  G1_Training_Plan.md  QUICK_REFERENCE.txt  README.md  TROUBLESHOOTING.md  diagnose.sh  emergency_launch.sh  find_camera.sh  fix_and_launch.sh  launch_ridgeback.sh  launch_vision.sh  parse_joints.py  restart_system.sh  robot.urdf  run_frontier_exploration.sh  run_minimal.sh  run_mission.sh  test_camera.sh  test_diff.py  test_minimal.sh  test_odom_plugin.sdf  verify_system.sh
install/: local_setup.sh  (+4 more)
src/dynamo_minimal_sim/: package.xml  setup.cfg  setup.py
src/dynamo_minimal_sim/config/: slam_params.yaml
src/dynamo_minimal_sim/dynamo_minimal_sim/: drive_forward.py  odom_tf_pub.py  scan_merger.py
src/dynamo_minimal_sim/launch/: minimal_mapping_launch.py
src/dynamo_minimal_sim/rviz/: mapping_view.rviz
src/dynamo_minimal_sim/urdf/: accessories.urdf.xacro  camera_extras.urdf.xacro  lidar_extras.urdf.xacro  ridgeback.gazebo  ridgeback.urdf.xacro
src/dynamo_minimal_sim/urdf/accessories/: hokuyo_ust-10lx_mount.urdf.xacro  microstrain_imu.urdf.xacro
src/dynamo_minimal_sim/worlds/: hospital.sdf  warehouse.sdf
src/ridgeback_vision_detection/: DYNAMIC_MISSION_EXPLANATION.md  README.md  package.xml  setup.cfg  setup.py
src/ridgeback_vision_detection/config/: nav2_params.yaml
src/ridgeback_vision_detection/launch/: detection_launch.py  ridgeback_detection_launch.py  simple_launch.py
src/ridgeback_vision_detection/ridgeback_vision_detection/: detector.py  detector.py.bak  dynamic_autonomous_mission.py  mission_manager.py  mission_types.py  odom_tf_pub.py  test_pub.py
src/ridgeback_vision_detection/ridgeback_vision_detection/managers/: __init__.py  exploration_manager.py  navigation_manager.py  perception_manager.py  return_home_manager.py  safety_controller.py
src/ridgeback_vision_detection/rviz/: nav2_view.rviz
src/ridgeback_vision_detection/urdf/: accessories.urdf.xacro  camera_extras.urdf.xacro  lidar_extras.urdf.xacro  ridgeback.urdf.xacro
src/ridgeback_vision_detection/urdf/accessories/: hokuyo_ust-10lx_mount.urdf.xacro  microstrain_imu.urdf.xacro
src/ridgeback_vision_detection/worlds/: warehouse.sdf
(+76 files in other folders)
